Add docker agent on demand job